// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchKmsCryptoKeys should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-02-18T00:04:21.166607506Z",
            "name": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1613606661166,
      "displayName": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring",
      "projectId": "j1-gc-integration-dev-v2",
      "shortName": "j1-gc-integration-dev-v2-bucket-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/j1-gc-integration-dev-v2-bucket-ring/key?project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-02-18T00:04:24.586396675Z",
            "name": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key",
            "nextRotationTime": "2021-02-20T00:04:26.614561Z",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-02-19T00:04:25.614561125Z",
              "generateTime": "2021-02-19T00:04:25.614561125Z",
              "name": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key/cryptoKeyVersions/2",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1613606664586,
      "displayName": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key",
      "nextRotationTime": 1613779466614,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1613693065614,
      "primaryGenerateTime": 1613693065614,
      "primaryName": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key/cryptoKeyVersions/2",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/j1-gc-integration-dev-v2-bucket-ring/projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key?project=j1-gc-integration-dev-v2",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring",
      "_key": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring|has|projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "google_kms_key_ring",
    "google_kms_crypto_key",
    "google_kms_key_ring_has_crypto_key",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchKmsKeyRings should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-02-18T00:04:21.166607506Z",
            "name": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1613606661166,
      "displayName": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring",
      "projectId": "j1-gc-integration-dev-v2",
      "shortName": "j1-gc-integration-dev-v2-bucket-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/j1-gc-integration-dev-v2-bucket-ring/key?project=j1-gc-integration-dev-v2",
    },
  ],
  "collectedRelationships": Array [],
  "encounteredTypes": Array [
    "google_kms_key_ring",
  ],
  "numCollectedEntities": 1,
  "numCollectedRelationships": 0,
}
`;
